src/objects/pse__Expense__c.object
<CustomObject>
    <customHelpPage>pse__ExpenseHelp</customHelpPage>
    <description>Sometimes called an expense line or row. Represents a record of an expense incurred by a resource assigned to a project or opportunity. Expenses are grouped into an expense report for submission and approval, and may be subject to limits or rates depending on type (for example, Lodging, Auto Mileage). An expense may be billable or non-billable. Unless marked otherwise, all expenses contain a reimbursable amount for the resource. Expenses have a lookup relationship to expense reports.</description>
    <fields>
        <fullName>pse__Admin_Global_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, allows Admin to make &apos;global&apos; changes to the Expense, including edits to the Expense&apos;s Project, Resource, Currency, or Date, even if Include In Financials is checked. Config requirement: Actuals Calculation Mode must be set to &apos;Scheduled&apos;.</description>
        <inlineHelpText>If checked, allows Admin to make &apos;global&apos; changes to the Expense, including edits to the Expense&apos;s Project, Resource, Currency, or Date, even if Include In Financials is checked. Config requirement: Actuals Calculation Mode must be set to &apos;Scheduled&apos;.</inlineHelpText>
        <label>Admin Global Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Amount_To_Bill__c</fullName>
        <formula>pse__Billing_Currency__c &amp; &apos; &apos; &amp; TEXT(ROUND(pse__Billing_Amount__c,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount To Bill</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Amount_To_Reimburse__c</fullName>
        <formula>pse__Reimbursement_Currency__c &amp; &apos; &apos; &amp; TEXT(ROUND(pse__Reimbursement_Amount__c,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount To Reimburse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Amount__c</fullName>
        <description>The amount of this expense (in the expense&apos;s incurred currency)</description>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Applied_Expense_Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field will hold the Expense Rate applied on Expense.</description>
        <inlineHelpText>Field will hold the Expense Rate applied on Expense.</inlineHelpText>
        <label>Applied Expense Rate</label>
        <referenceTo>pse__Expense_Limit_Rate__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked when the Expense is approved, which should be based on whether its parent Expense Report (if any) is approved.</description>
        <inlineHelpText>This checkbox should be checked when the Expense is approved, which should be based on whether its parent Expense Report (if any) is approved.</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Approved_for_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Approved_for_Vendor_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for Vendor Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Assignment__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Assignment__c</referenceTo>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Audit_Notes_History__c</fullName>
        <description>Stores audit notes history. When a user changes a project or assignment using the Timecard UI and the audit notes exceed 255 characters, older audit notes are moved and appended here.</description>
        <inlineHelpText>Stores audit notes history. When a user changes a project or assignment using the Timecard UI and the audit notes exceed 255 characters, older audit notes are moved and appended here.</inlineHelpText>
        <label>Audit Notes History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Audit_Notes__c</fullName>
        <label>Audit Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Bill_Date__c</fullName>
        <label>Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Bill_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill Transaction</label>
        <referenceTo>pse__Transaction__c</referenceTo>
        <relationshipLabel>Expense (Bill Transaction)</relationshipLabel>
        <relationshipName>Bill_Tx_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Amount__c</fullName>
        <description>This formula equals Amount (minus Non-Billable Incurred Amount and Tax if any) for billable Expenses and zero for non-billable Expenses:  all in the incurred currency.</description>
        <formula>IF(ISNULL(pse__Amount__c),0.00,IF((pse__Billable__c),(pse__Amount__c-pse__Non_Billable_Incurred_Subtotal__c),0.00))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula equals Amount (minus Non-Billable Incurred Amount and Tax if any) for billable Expenses and zero for non-billable Expenses:  all in the incurred currency.</inlineHelpText>
        <label>Billable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Fee_Flat_Amount__c</fullName>
        <description>Flat fee in Project currency by which to increase the billable amount of the Expense, defaulted from the Project. The calculation will apply any percentage expense fee*before* this flat expense fee amount.</description>
        <inlineHelpText>Flat fee in Project currency by which to increase the billable amount of the Expense, defaulted from the Project. The calculation will apply any percentage expense fee*before* this flat expense fee amount.</inlineHelpText>
        <label>Billable Fee Flat Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Fee_Flat__c</fullName>
        <description>Text formula showing flat fee in Project currency by which to increase the billable amount of the Expense, defaulted from Project along with Project currency. The calculation will apply any percentage expense fee*before* this flat expense fee amount.</description>
        <formula>TEXT(pse__Project__r.CurrencyIsoCode) &amp; &quot; &quot; &amp; IF(ISNULL(pse__Billable_Fee_Flat_Amount__c),&quot;0.00&quot;,TEXT(pse__Billable_Fee_Flat_Amount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Text formula showing flat fee in Project currency by which to increase the billable amount of the Expense, defaulted from Project along with Project currency. The calculation will apply any percentage expense fee*before* this flat expense fee amount.</inlineHelpText>
        <label>Billable Fee Flat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Fee_Percentage__c</fullName>
        <description>Fee percentage by which to increase the billable amount of the Expense, defaulted from the Project. 0% means no increase (default), whereas 100% means double. The calculation will apply the percentage expense fee*before* any flat expense fee.</description>
        <inlineHelpText>Fee percentage by which to increase the billable amount of the Expense, defaulted from the Project. 0% means no increase (default), whereas 100% means double. The calculation will apply the percentage expense fee*before* any flat expense fee.</inlineHelpText>
        <label>Billable Fee Percentage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Amount_Pre_Fee_Subtotal__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billing Amount (Pre-Fee Subtotal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Currency__c</fullName>
        <label>Billing Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Invoiced__c</fullName>
        <description>Reflects Invoiced flag value on Billing Event Item&apos;s parent Billing Event</description>
        <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),$Label.pse__common_label_n_a,IF(pse__Billing_Event_Item__r.pse__Billing_Event__r.pse__Invoiced__c,$Label.pse__common_label_yes,$Label.pse__common_label_no))</formula>
        <label>Billing Event Invoiced</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Event Item</label>
        <referenceTo>pse__Billing_Event_Item__c</referenceTo>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Released__c</fullName>
        <description>Reflects Released flag value on Billing Event Item&apos;s parent Billing Event</description>
        <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),$Label.pse__common_label_n_a,IF(pse__Billing_Event_Item__r.pse__Billing_Event__r.pse__Is_Released__c,$Label.pse__common_label_yes,$Label.pse__common_label_no))</formula>
        <label>Billing Event Released</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Status__c</fullName>
        <description>Status pick list value on Billing Event Item&apos;s parent Billing Event</description>
        <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),&apos;&apos;,TEXT(pse__Billing_Event_Item__r.pse__Billing_Event__r.pse__Status__c))</formula>
        <label>Billing Event Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event__c</fullName>
        <description>Formula hyperlink to the Billing Event (parent record to the Bill Event Item) if any.</description>
        <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),&apos;&apos;,HYPERLINK(&apos;/&apos;&amp;pse__Billing_Event_Item__r.pse__Billing_Event__c, IF(OR(ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__r.Name),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__r.Name)),pse__Billing_Event_Item__r.pse__Billing_Event__c,(pse__Billing_Event_Item__r.pse__Billing_Event__r.Name))))</formula>
        <label>Billing Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this item cannot be billed</description>
        <label>Billing Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Transaction</label>
        <referenceTo>pse__Transaction__c</referenceTo>
        <relationshipLabel>Expense (Cost Transaction)</relationshipLabel>
        <relationshipName>CostForExpenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Distance__c</fullName>
        <inlineHelpText>Distance traveled for auto mileage reimbursement.</inlineHelpText>
        <label>Distance</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Eligible_for_Billing__c</fullName>
        <description>Indicates Expense is in a state that is eligible for Billing Event Generation (not including the Approved for Billing flag, which may also be required per global config).

This means all of the following conditions must be met:
Billing Hold = false
Exclude from Billing = false
Include In Financials = true
Billable = true
Billed = false
Invoiced = false
Billing Event Item = {blank}
Project = {not blank}
Project&apos;s Account = {not blank}
Project Exclude From Billing = false</description>
        <formula>IF(AND(NOT(pse__Billing_Hold__c),NOT(pse__Exclude_from_Billing__c),pse__Include_In_Financials__c,pse__Billable__c,NOT(pse__Billed__c),NOT(pse__Invoiced__c),OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c)),NOT(OR(ISNULL(pse__Project__c),ISBLANK(pse__Project__c))),NOT(OR(ISNULL(pse__Project__r.pse__Account__c),ISBLANK(pse__Project__r.pse__Account__c))),NOT(pse__Project__r.pse__Exclude_From_Billing__c)),$Label.pse__common_label_yes,$Label.pse__common_label_no)</formula>
        <inlineHelpText>Indicates Expense is in a state that is eligible for Billing Event Generation (not including the Approved for Billing flag, which may also be required per global config).</inlineHelpText>
        <label>Eligible for Billing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Exchange_Rate_Billing_Currency__c</fullName>
        <label>Exchange Rate (Billing Currency)</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Exchange_Rate_Incurred_Currency__c</fullName>
        <label>Exchange Rate (Incurred Currency)</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Exchange_Rate_Reimbursement_Currency__c</fullName>
        <label>Exchange Rate (Reimbursement Currency)</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Exchange_Rate_Resource_Defined__c</fullName>
        <description>When set, this field sets the *relative* exchange rate between Incurred Rate and Reimbursement Rate that is experienced by the Resource incurring the Expense.  This then overrides the Incurred Exchange Rate (relative to corporate rate) so that it has the right ratio to the Reimbursement Exchange Rate (relative to corporate rate).</description>
        <inlineHelpText>When set, this field sets the *relative* exchange rate between Incurred Rate and Reimbursement Rate that is experienced by the Resource incurring the Expense.</inlineHelpText>
        <label>Exchange Rate (Resource-Defined)</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, never bill this business record.  Same effect as Billing Hold, but intended to reflect a permanent exclusion from Billing Generation.</description>
        <inlineHelpText>If checked, never bill this business record.  Same effect as Billing Hold, but intended to reflect a permanent exclusion from Billing Generation.</inlineHelpText>
        <label>Exclude from Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Expense Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Report</label>
        <referenceTo>pse__Expense_Report__c</referenceTo>
        <relationshipName>Expense_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Split_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Split Parent</label>
        <referenceTo>pse__Expense__c</referenceTo>
        <relationshipName>Expense_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Include_In_Financials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include In Financials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Incurred_Tax_Non_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked for a billable Expense, this means that the portion of the Expense amount specified in the Incurred Tax field is not billable.  (This is separate from and in addition to any amount in the Non-Billable Incurred Amount field).</description>
        <inlineHelpText>If checked for a billable Expense, this means that the portion of the Expense amount specified in the Incurred Tax field is not billable.  (This is separate from and in addition to any amount in the Non-Billable Incurred Amount field).</inlineHelpText>
        <label>Incurred Tax Non-Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Incurred_Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount of tax incurred</description>
        <inlineHelpText>The amount of tax incurred</inlineHelpText>
        <label>Incurred Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Invoice_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Transaction</label>
        <referenceTo>pse__Transaction__c</referenceTo>
        <relationshipLabel>Expense (Invoice Transaction)</relationshipLabel>
        <relationshipName>Invoice_Tx_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Lost_Receipt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is visible on UI if user requires attachment on expense lines if Expense report is submitted. If this field is set true then user does not need to add attachment although the config is set to true.</description>
        <inlineHelpText>This field is visible on UI if user requires attachment on expense lines if Expense report is submitted. If this field is set true then user does not need to add attachment although the config is set to true.</inlineHelpText>
        <label>Lost Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Milestone__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <infoMessage>The milestones of the related project are shown initially.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Mobile_Expense_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>Mobile Expense Reference ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Amount__c</fullName>
        <description>This formula equals Amount for non-billable Expenses and Non-Billable Incurred Amount and Tax (anywhere from zero to Expense Amount) for billable Expenses: all in the incurred currency.</description>
        <formula>IF(ISNULL(pse__Amount__c),0.00,IF(pse__Billable__c,pse__Non_Billable_Incurred_Subtotal__c,pse__Amount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula equals Amount for non-billable Expenses and Non-Billable Incurred Amount and Tax (anywhere from zero to Expense Amount) for billable Expenses: all in the incurred currency.</inlineHelpText>
        <label>Non-Billable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Incurred_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>If provided for a billable Expense, this is subtracted from the Expense Amount (incurred currency) to calculate the Expense&apos;s billable amount.  Min. value zero, max. value Expense amount.  Default value:  zero or null.  No effect on non-billable Expenses.</description>
        <inlineHelpText>If provided for a billable Expense, this is subtracted from the Expense Amount (incurred currency) to calculate the Expense&apos;s billable amount.  Min. value zero, max. value Expense amount.  Default value:  zero or null.  No effect on non-billable Expenses.</inlineHelpText>
        <label>Non-Billable Incurred Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Incurred_Subtotal__c</fullName>
        <description>This formula adds any Non-Billable Incurred Tax (only if Incurred Tax Non-Billable is checked) to any additional Non-Billable Incurred Amount to get a Non-Billable Incurred Subtotal, with a minimum of 0.00 and a maximum of the Expense Amount.</description>
        <formula>MIN(MAX((IF(ISNULL(pse__Non_Billable_Incurred_Amount__c),0.00,pse__Non_Billable_Incurred_Amount__c)+IF(OR(NOT(pse__Incurred_Tax_Non_Billable__c),ISNULL(pse__Incurred_Tax__c)),0.00,pse__Incurred_Tax__c)),0.00),MAX(pse__Amount__c,0.00))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula adds any Non-Billable Incurred Tax (only if Incurred Tax Non-Billable is checked) to any additional Non-Billable Incurred Amount to get a Non-Billable Incurred Subtotal, with a minimum of 0.00 and a maximum of the Expense Amount.</inlineHelpText>
        <label>Non-Billable Incurred Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Non_Reimbursible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this checkbox is checked, the Reimbursement amount for the Expense will be zero regardless of the incurred amount.</description>
        <inlineHelpText>If this checkbox is checked, the Reimbursement amount for the Expense will be zero regardless of the incurred amount.</inlineHelpText>
        <label>Non-Reimbursable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Override_Group_Currency_Code__c</fullName>
        <formula>TEXT(pse__Override_Group__r.CurrencyIsoCode)</formula>
        <label>Override Group Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Override_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Overrides the Group to which the Expense Transactions will roll up for Group Actuals, even if the Project is in a different Group. Typically an Expense&apos;s Transactions roll up to its Project&apos;s or Resource&apos;s Group based on &apos;follows&apos; rules. Note that either way, the Transactions will continue to roll up to the same Project&apos;s Project Actuals.</description>
        <inlineHelpText>Overrides the Group to which the Expense Transactions will roll up for Group Actuals, even if the Project is in a different Group. Typically an Expense&apos;s Transactions roll up to its Project&apos;s or Resource&apos;s Group based on &apos;follows&apos; rules.</inlineHelpText>
        <label>Override Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Override Group For Expenses</relationshipLabel>
        <relationshipName>Override_Group_For_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Practice_Currency_Code__c</fullName>
        <formula>TEXT(pse__Override_Practice__r.CurrencyIsoCode)</formula>
        <label>Override Practice Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Override_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Overrides the Practice to which the Expense Transactions will roll up for Practice Actuals, even if the Project is in a different Practice. Typically an Expense&apos;s Transactions roll up to its Project&apos;s or Resource&apos;s Practice based on &apos;follows&apos; rules. Note that either way, the Transactions will continue to roll up to the same Project&apos;s Project Actuals.</description>
        <inlineHelpText>Overrides the Practice to which the Expense Transactions will roll up for Practice Actuals, even if the Project is in a different Practice. Typically an Expense&apos;s Transactions roll up to its Project&apos;s or Resource&apos;s Practice based on &apos;follows&apos; rules.</inlineHelpText>
        <label>Override Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Override Practice For Expenses</relationshipLabel>
        <relationshipName>Override_Practice_For_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Rate_Billing_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Rate (Billing Currency)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Override_Rate_Incurred_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Rate (Incurred Currency)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Override_Rate_Reimbursement_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Rate (Reimbursement Currency)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Override_Region_Currency_Code__c</fullName>
        <formula>TEXT(pse__Override_Region__r.CurrencyIsoCode)</formula>
        <label>Override Region Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Override_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Overrides the Region to which the Expense Transactions will roll up for Regional Actuals, even if the Project is in a different Region. Typically an Expense&apos;s Transactions roll up to its Project&apos;s or Resource&apos;s Region based on &apos;follows&apos; rules. Note that either way, the Transactions will continue to roll up to the same Project&apos;s Project Actuals.</description>
        <inlineHelpText>Overrides the Region to which the Expense Transactions will roll up for Regional Actuals, even if the Project is in a different Region. Typically an Expense&apos;s Transactions roll up to its Project&apos;s or Resource&apos;s Region based on &apos;follows&apos; rules.</inlineHelpText>
        <label>Override Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Override Region For Expenses</relationshipLabel>
        <relationshipName>Override_Region_For_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project_Methodology__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Project Methodology</description>
        <inlineHelpText>Lookup  to Project Methodology</inlineHelpText>
        <label>Project Methodology</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Project_Methodology__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <infoMessage>The methodologies of the related project are shown initially.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Project_Methodology__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project_Phase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Project Phase</description>
        <inlineHelpText>Lookup to Project Phase</inlineHelpText>
        <label>Project Phase</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Project_Phase__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <infoMessage>The phases of the related project are shown initially.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Project_Phase__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Rate_Unit__c</fullName>
        <description>Must be kept in sync with Expense_Limit_Rate__c.Rate_Unit__c</description>
        <label>Rate Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Mile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilometer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Reimbursement_Amount_In_Project_Currency__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This field stores a numeric value for the Reimbursement Amount converted to the Project (billing) currency using system (not overridden) rates, for later use in vendor invoicing.</description>
        <inlineHelpText>This field stores a numeric value for the Reimbursement Amount converted to the Project (billing) currency using system (not overridden) rates, for later use in vendor invoicing.</inlineHelpText>
        <label>Reimbursement Amount In Project Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Reimbursement_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Reimbursement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Reimbursement_Currency__c</fullName>
        <label>Reimbursement Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
</CustomObject>